# D3DE

./: .gitignore  .travis.yml  CMakeLists.txt  D3DE.sln
Project/Core/: Core.vcxproj  Core.vcxproj.filters
Project/Core_Test/: Core_Test.vcxproj  Core_Test.vcxproj.filters
Resources/Shaders/: fs.glsl  vs.glsl
Source/: CMakeLists.txt
Source/Application/: CMakeLists.txt  glad.c  main.cpp
Source/Core/: CMakeLists.txt  Command.cpp  Command.h  ConsoleLog.cpp  ConsoleLog.h  ExamBoard.cpp  ExamBoard.h  File.cpp  File.h  FileLog.cpp  FileLog.h  Flags.h  Handler.h  Log.cpp  Log.h  Mesh.cpp  Mesh.h  Module.cpp  Module.h  Observer.h  Singleton.h  StringUtil.h  System.cpp  System.h  UnitTest.cpp  UnitTest.h  export.h
Source/Core_Test/: StringUtil_test.h  main.cpp
Source/IRender/: Buffer.h  CMakeLists.txt  FrameBuffer.h  IRender.h  Shader.h  State.h  Texture.h  Vertex.h  defines.h
Source/IRender/DirectX/: Buffer.cpp  IRender.cpp  Shader.cpp  State.cpp  Vertex.cpp  context.h  enums.h
Source/IRender/OpenGL/: Buffer.cpp  FrameBuffer.cpp  IRender.cpp  Shader.cpp  State.cpp  Texture.cpp  Vertex.cpp  enums.h
Source/IRender/OpenGL/lin/: context.cpp  context.lin.cpp
Source/IRender/OpenGL/win/: context.win.cpp
Source/Platform/: CMakeLists.txt  Platform.cpp  Platform.h  Platform.lin.cpp  enums.h  misc.h
Source/Platform/lin/: context.cpp  context.h  context.lin.cpp  context.lin.h  enums.lin.h  event.cpp  event.lin.cpp  input.cpp  input.lin.cpp  window.cpp  window.lin.cpp
Source/Platform/win/: context.cpp  context.h  context.win.cpp  context.win.h  enums.win.h  event.cpp  event.win.cpp  input.cpp  input.win.cpp  window.cpp  window.win.cpp
Source/Test/: CMakeLists.txt  main.cpp
Source/Test/Core/: CMakeLists.txt  File_test.cpp  Module_test.cpp  Observer_test.cpp  StringUtil_test.cpp  System_test.cpp  declerations.h  main.cpp
Source/Test/Core_Test/: CMakeLists.txt  File_test.cpp  Flags_test.cpp  Handler_test.cpp  Handler_test.h  Observer_test.cpp  StringUtil_test.cpp  StringUtil_test.h  System_test.cpp  declerations.h  main.cpp
Source/Test/Platform/: Input_tests.cpp  Window_tests.cpp  declerations.h  demo.cpp  main.cpp
Source/Test/Types/: CMakeLists.txt  Matrix3_test.cpp  Matrix3x4_test.cpp  String_test.cpp  Vector2_test.cpp  Vector3_test.cpp  Vector4_test.cpp  declerations.h  main.cpp
Source/Types/: CMakeLists.txt  Matrix.h  Matrix2.h  Matrix3.h  Matrix4.h  String.cpp  String.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h  defines.h
Source/glad/: glad.h
